--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "react-router-dom": "^4.3.1"
